// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar examples > Avatar as button should render correctly 1`] = `
<div>
  <button
    aria-describedby="avatar-as-a-button-notifications-count"
    aria-label="Notifications"
    class="v-avatar v-button v-button-large v-button-tertiary"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-account"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
      />
    </svg>
    <sup
      class="v-badge v-badge-number v-typography-label-active"
      id="avatar-as-a-button-notifications-count"
    >
      3
    </sup>
  </button>
</div>
`;

exports[`Avatar examples > Large ficticious brand avatar should render correctly 1`] = `
<div>
  <span
    aria-label="Brand"
    class="v-avatar fictitious-brand"
    role="img"
    style="--v-avatar-background: #6ef2fb; --v-avatar-foreground: var(--palette-default-text); --typography-body-2-font-weight: 800;"
  >
    B
  </span>
</div>
`;

exports[`Avatar examples > Large icon avatar should render correctly 1`] = `
<div>
  <span
    aria-label="Alex Miller"
    class="v-avatar"
    role="img"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-account"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
      />
    </svg>
  </span>
</div>
`;

exports[`Avatar examples > Large image avatar should render correctly 1`] = `
<div>
  <img
    alt="Alex Miller"
    class="v-avatar"
    src="https://www.url.com/alex-miller-stock.png"
  />
</div>
`;

exports[`Avatar examples > Large initials avatar should render correctly 1`] = `
<div>
  <span
    aria-label="Alex Miller"
    class="v-avatar"
    role="img"
  >
    AM
  </span>
</div>
`;

exports[`Avatar examples > Small horizontal icon avatar should render correctly 1`] = `
<div>
  <div
    style="block-size: 175px;"
  >
    <div
      class="v-tab"
    >
      <button
        aria-expanded="false"
        aria-label="Alex Miller"
        class="v-avatar v-button v-button-large v-button-tertiary"
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-low v-icon-account"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-secondary"
            d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
          />
          <path
            class="v-icon-primary"
            d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-low v-icon-chevron-down v-tab-suffix"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M23 7.44775L12.6641 18.7007C12.2971 19.1001 11.7029 19.1001 11.3359 18.7007L1 7.44775L2.3291 6.00049L12 16.5308L21.6709 6.00049L23 7.44775Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Avatar examples > Small image avatar should render correctly 1`] = `
<div>
  <img
    alt="Alex Miller"
    class="v-avatar v-avatar-small"
    src="https://www.url.com/alex-miller-stock.png"
  />
</div>
`;

exports[`Avatar examples > Small initials avatar should render correctly 1`] = `
<div>
  <span
    aria-label="Alex Miller"
    class="v-avatar v-avatar-small"
    role="img"
  >
    AM
  </span>
</div>
`;

exports[`Avatar examples > Small vertical icon avatar should render correctly 1`] = `
<div>
  <div
    aria-label="Vertical nav with active page"
    class="v-nav v-nav-vertical"
  >
    <div
      class="v-tabs v-tabs-vertical"
    >
      <div
        class="v-tab"
      >
        <button
          aria-expanded="false"
          aria-label="Alex Miller"
          class="v-button v-button-large v-button-tertiary"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-account"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
            />
            <path
              class="v-icon-primary"
              d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
